[gd_scene load_steps=6 format=2]

[ext_resource path="res://Soldiers/Command/EnemyCommandItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://Radar/ShipRadar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shooter/Shooter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Soldiers/Command/VisualEnemyCommander.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 13.0384

[node name="VisualEnemyCommander" type="Area2D"]
script = ExtResource( 4 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyCommandItem" parent="." instance=ExtResource( 1 )]
scale = Vector2( 0.05, 0.05 )

[node name="ShipRadar" parent="." instance=ExtResource( 2 )]

[node name="Shooter" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -20 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.65

[connection signal="area_entered" from="." to="." method="_on_VisualEnemyCommander_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_VisualEnemyCommander_body_entered"]
[connection signal="ShipDetected" from="ShipRadar" to="." method="_on_ShipRadar_ShipDetected"]
[connection signal="ShipRadarExited" from="ShipRadar" to="." method="_on_ShipRadar_ShipRadarExited"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_ShootingTimer_timeout"]
